--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ homepage = "https://github.com/joukos/PaperTTY"
 [tool.poetry.dependencies]
 click = "^7.1.2"
 Pillow = "7.1.2"
-python = "^3.5"
+python = "3.8.12"
 "RPi.GPIO" = "^0.7.0"
 spidev = "^3.4"
 vncdotool = "^1.0.0"
