--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,9 @@ homepage = "https://github.com/joukos/PaperTTY"
 [tool.poetry.dependencies]
 click = "^7.1.2"
 Pillow = "7.1.2"
-python = "3.8.12"
+python = "3.9.19"
 "RPi.GPIO" = "^0.7.0"
-gpiozero = "^2.0"
+# gpiozero = "2.0.1"
 spidev = "^3.4"
 vncdotool = "^1.0.0"
 
